# T7CnC-Backend

./: .gitignore  README.md  alembic.ini  price_models.ipynb  pyproject.toml  requirements.txt
app/: .env.example  config.py  data_schema.py  database.py  main.py  schema.py
app/controller/: auth.py  helloworld.py  plaid_controller.py  user.py  userController.py
app/model/: __init__.py  user.py  users.py
app/service/: auth.py  feature_engineering.py  ml_model.py  plaid_service.py  user.py  userService.py
data science/: README.md
migrations/: env.py
migrations/versions/: 235ade4d9654_make_plaid_token_optional.py  523077e9a7c7_rm_jwt_token.py  6f174bb3d728_initial_migration.py  ccdc4841bdd2_add_item_id.py  d69699a80c37_init_migration.py
